cabal-version:      >=1.10
name:               cli-extras
version:            0.1.0.2
license:            BSD3
license-file:       LICENSE
copyright:          Obsidian Systems LLC 2020
maintainer:         maintainer@obsidian.systems
author:             Obsidian Systems LLC
stability:          Unstable
bug-reports:        https://github.com/obsidiansystems/cli-extras/issues
synopsis:
  Miscellaneous utilities for building and working with command line interfaces

description:
  Convenience functions for writing command line interfaces, providing facilities for logging, process management, and printing to the terminal.

category:           Command Line
build-type:         Simple
extra-source-files: CHANGELOG.md
                    README.md

tested-with: GHC ==8.6.5 || ==8.8.4

library
  exposed-modules:
    Bindings.Cli.Coreutils
    Cli.Extras
    Cli.Extras.SubExcept
    Cli.Extras.Logging
    Cli.Extras.Process
    Cli.Extras.Spinner
    Cli.Extras.TerminalString
    Cli.Extras.Theme
    Cli.Extras.Types

  hs-source-dirs:   src

  default-language: Haskell2010
  ghc-options:      -Wall -fobject-code
  build-depends:
      aeson
    , ansi-terminal
    , base
    , bytestring
    , containers
    , exceptions
    , io-streams
    , lens
    , logging-effect
    , monad-loops
    , mtl
    , shell-escape
    , process
    , shell-escape
    , terminal-size
    , text
    , time
    , transformers
    , which
    , utf8-string
source-repository head
  type:     git
  location: https://github.com/obsidiansystems/cli-extras
